# datascience_dash

01 plotly_dash_exemple/: exemple_04.py  exemple_06.py  exemple_08.py  exemple_09.py  exemple_14.py  exemple_15.py  exemple_17.py
01_plotly_dash_exemple/: exemple_02.py  exemple_03.py  exemple_12.py
02 dash/: layout_app1.py  layout_app2.py
02_dash/: layout_app3.py
03 Automatizando Tarefas com Python/0. Onboarding/Crontab/: cron.py
03 Automatizando Tarefas com Python/0. Onboarding/E-mail/: envio_de_email.py
03 Automatizando Tarefas com Python/0. Onboarding/E-mail/passwords/: token
03 Automatizando Tarefas com Python/0. Onboarding/Excel com Python/: exemplo.xlsx  formula.xlsx
03_Automatizando Tarefas com Python/Onboarding/Crontab/: cron.py
03_Automatizando Tarefas com Python/Onboarding/E-mail/: envio_de_email.py  recebendo_emails.py
03_Automatizando Tarefas com Python/Onboarding/E-mail/passwords/: token
03_Automatizando Tarefas com Python/Onboarding/Excel com Python/: bar.xlsx  bar_charts.py  exemplo.xlsx  formatacao.py  formula.py  operacoes_basicas.py
04_Extraindo_dados/Asimov_News/dados/: links_noticias.json
04_Extraindo_dados/Asimov_News/scraping_sites/: site.py
05_DBT_Northwind/: README.md  docker-compose.yml  pyproject.toml
05_DBT_Northwind/northwind/models/raw/: raw_brazil.sql  schema.yml
05_DBT_Northwind/northwind/seeds/: brazil.csv  region.csv
06_DTB_BigQuery/: .pre-commit-config.yaml  .user.yml  README.md  dbt_project.yml  pyproject.toml
dash_exemple/: exemple_01.py  exemple_05.py  exemple_10.py  exemple_11.py  exemple_13.py
(+4 files in other folders)
